use lts 2016 base image

--- a/3.4.3/Dockerfile
+++ b/3.4.3/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/windowsservercore
+FROM microsoft/windowsservercore:ltsc2016
 
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de
 
