restructure to major.minor directories, fix download url for old relases

--- a/3.4-nano/Dockerfile
+++ b/3.4-nano/Dockerfile
@@ -1,16 +1,16 @@
-FROM microsoft/nanoserver
+FROM microsoft/nanoserver:sac2016
 
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-ENV R_VERSION 3.4.3
+ENV R_VERSION 3.4.4
 ENV R_INSTALLER_HASH 0ff087acbae677d7255af19b0a9df27f
 
 WORKDIR /
 
 # "latest" version redirect would be available via https://cloud.r-project.org/bin/windows/base/release.htm
-RUN Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
+RUN Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/old/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
 
 RUN if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $env:R_INSTALLER_HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
 
