--- a/3.4/Dockerfile
+++ b/3.4/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 # "latest" version redirect would be available via https://cloud.r-project.org/bin/windows/base/release.htm
-ENV R_VERSION 3.4.3
+ENV R_VERSION 3.4.4
 ENV R_INSTALLER_HASH 0ff087acbae677d7255af19b0a9df27f
 
 WORKDIR /
@@ -14,7 +14,7 @@ WORKDIR /
 RUN Write-Debug [Net.ServicePointManager]::SecurityProtocol ;\
     [Net.ServicePointManager]::SecurityProtocol ;\
     [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls', 'Tls11', 'Tls12'; \
-    Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
+    Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/old/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
 
 RUN if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $env:R_INSTALLER_HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
 
