fix paths in CI configs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,9 @@ install:
 build_script:
   - ps: Write-Host Starting build
   - ps: |
-      docker build --tag rocker-win:3.4.4 --file 3.4.4/Dockerfile .
-      docker build --tag rocker-win:3.5.1 --file 3.5.1/Dockerfile .
-      docker build --tag rocker-win:latest --file current/Dockerfile .
+      docker build --tag rocker-win:3.4.4 --file 3.4/Dockerfile .
+      docker build --tag rocker-win:3.5.1 --file 3.5/Dockerfile .
+      docker build --tag rocker-win:latest --file latest/Dockerfile .
 
 test_script:
   - ps: |
@@ -34,3 +34,6 @@ deploy_script:
       docker push nuest/rocker-win:3.4.3
       docker push nuest/rocker-win:3.5.1
       docker push nuest/rocker-win:latest
+
+on_finish:
+  - docker images
