--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,11 @@ script:
       set -x
 
       # build:
-      docker build --tag rocker-win:3.4.3 --file 3.4.3/Dockerfile .
-      #docker build --tag rocker-win:3.5.1 --file 3.5.1/Dockerfile .
-      #docker tag rocker-win:3.5.1 rocker-win:latest
-
+      docker build --tag rocker-win:latest --file latest/Dockerfile .
+      
       # test:
-      docker run --rm -it rocker-win:3.4.3 R.exe --version
-      docker run --rm -it rocker-win:3.4.3 Rscript.exe -e "sessionInfo()"
-      #docker run --rm -it rocker-win:3.5.1 R.exe --version
+      docker run --rm -it rocker-win R.exe --version
+      docker run --rm -it rocker-win Rscript.exe -e "sessionInfo()"
     )
 
 after_script:
