--- a/3.5/Dockerfile
+++ b/3.5/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /
 # flexibly allow security protocols, see https://stackoverflow.com/questions/51208896/
 RUN Write-Debug [Net.ServicePointManager]::SecurityProtocol ;\
     [Net.ServicePointManager]::SecurityProtocol ;\
-    [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls', 'Tls11', 'Tls12'; \
+    [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls12'; \
     Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
 
 RUN if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $env:R_INSTALLER_HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
