--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -7,21 +7,25 @@ SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPref
 WORKDIR /
 
 # flexibly allow security protocols, see https://stackoverflow.com/questions/51208896/
-RUN Write-Debug [Net.ServicePointManager]::SecurityProtocol ;\
-    [Net.ServicePointManager]::SecurityProtocol ;\
-    [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls', 'Tls11', 'Tls12'; \
-    Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/release.htm -OutFile .\R-win.exe
+RUN [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls12' ;\
+    (Invoke-WebRequest -Uri 'https://cloud.r-project.org/bin/windows/base/release.htm' -UseBasicParsing).Content -match '.*URL=(?<version>.*)\">' | out-null ;\
+    Write (-join('https://cloud.r-project.org/bin/windows/base/', $matches['version'])) ;\
+    Invoke-WebRequest -Uri (-join('https://cloud.r-project.org/bin/windows/base/', $matches['version'])) -OutFile .\R-win.exe
 
-# must download hash from https://cran.r-project.org/bin/windows/base/md5sum.txt
-#RUN if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $env:R_INSTALLER_HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
+# Download hash then validate downloaded file
+RUN [Net.ServicePointManager]::SecurityProtocol = 'Ssl3', 'Tls12' ;\
+    (Invoke-WebRequest -Uri 'https://cloud.r-project.org/bin/windows/base/md5sum.txt' -UseBasicParsing).Content -match'(?<hash>.*) ' ;\
+    $HASH = $matches['hash'] ;\
+    Write-Debug $HASH ;\
+    if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
 
 # For options see https://cloud.r-project.org/bin/windows/base/rw-FAQ.html#How-do-I-check-an-installation_003f
-RUN Start-Process .\R-win.exe -ArgumentList '/SILENT /DIR="c:\R"' -Wait ; \
+RUN Start-Process .\R-win.exe -ArgumentList '/SILENT /DIR="c:\R"' -Wait ;\
     Remove-Item .\R-win.exe -Force
 
 # Add R.exe to PATH
-RUN $rPath = 'C:\R\bin' ; \
-		$newPath = ('{0};{1}' -f $rPath, $Env:PATH); \
+RUN $rPath = 'C:\R\bin' ;\
+		$newPath = ('{0};{1}' -f $rPath, $Env:PATH) ;\
 		setx /M PATH $newPath
 
 # Set CRAN mirror
@@ -29,7 +33,7 @@ RUN Add-Content c:\R\etc\Rprofile.site 'options(repos = c(CRAN = \"https://cloud
 
 # From https://github.com/StefanScherer/dockerfiles-windows/blob/master/chocolatey/Dockerfile
 ENV chocolateyUseWindowsCompression false
-RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); \
+RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'));\
     choco feature disable --name showDownloadProgress
 # Install a CLI text editor
 RUN choco install micro -y
