--- a/3.5/Dockerfile
+++ b/3.5/Dockerfile
@@ -37,4 +37,11 @@ RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/insta
 # Install a CLI text editor
 RUN choco install micro -y
 
+# Metadata http://label-schema.org/rc1/
+LABEL maintainer="Daniel Nüst <https://nordholmen.net>" \
+  org.label-schema.url="https://github.com/nuest/rocker-win" \
+  org.label-schema.name="rocker-win" \
+  org.label-schema.description="R in Windows Containers" \
+  org.label-schema.docker.schema-version="rc1"
+
 CMD ["R.exe"]
