run ltsc image on Travis (should work)

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ script:
       # test:
       docker run --rm rocker-win:1803-latest R.exe --version
       docker run --rm rocker-win:1803-latest Rscript.exe -e "sessionInfo()"
+
+      # test ltsc2016-based image:
+      docker run --rm -it rocker-win:ltsc2016-latest Rscript.exe -e "sessionInfo()"
     )
 
 after_script:
