--- a/1803/latest/Dockerfile
+++ b/1803/latest/Dockerfile
@@ -31,7 +31,7 @@ RUN Add-Content c:\R\etc\Rprofile.site 'options(repos = c(CRAN = \"https://cloud
 
 # From https://github.com/StefanScherer/dockerfiles-windows/blob/master/chocolatey/Dockerfile
 ENV chocolateyUseWindowsCompression false
-RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'));\
+RUN Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'));\
     choco feature disable --name showDownloadProgress
 # Install a CLI text editor
 RUN choco install micro -y
