--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 
-image: Visual Studio 2017
+image: Visual Studio 2019
 
 environment:
   DOCKER_USER:
@@ -17,11 +17,13 @@ build_script:
   - docker build --tag rocker-win:3.4.4 --file ltsc2016/3.4/Dockerfile .
   - docker build --tag rocker-win:3.5.1 --file ltsc2016/3.5/Dockerfile .
   - docker build --tag rocker-win:latest --file ltsc2016/latest/Dockerfile .
+  - docker build --tag rocker-win:3.6.2 --file ltsc2016/latest/Dockerfile .
 
 test_script:
   - ps: docker run --rm -it rocker-win:3.4.4 R.exe --version
   - ps: docker run --rm -it rocker-win:3.5.1 R.exe --version
   - ps: docker run --rm -it rocker-win:latest Rscript.exe -e "sessionInfo()"
+  - ps: docker run --rm -it rocker-win:3.6.2 Rscript.exe -e "sessionInfo()"
 
 deploy_script:
   - ps: |
@@ -29,9 +31,11 @@ deploy_script:
       docker tag rocker-win:3.4.4 nuest/rocker-win:ltsc2016-3.4.4
       docker tag rocker-win:3.5.1 nuest/rocker-win:ltsc2016-3.5.1
       docker tag rocker-win:latest nuest/rocker-win:ltsc2016-latest
+      docker tag rocker-win:3.6.2 nuest/rocker-win:ltsc2019-3.6.2
       docker push nuest/rocker-win:ltsc2016-3.4.4
       docker push nuest/rocker-win:ltsc2016-3.5.1
       docker push nuest/rocker-win:ltsc2016-latest
+      docker push nuest/rocker-win:ltsc2019-3.6.2
 
 on_finish:
   - docker images
