--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: 1.0.{build}
 
-image: Visual Studio 2019
+image:
+  - Visual Studio 2017
+  - Visual Studio 2019
 
 environment:
   DOCKER_USER:
@@ -8,34 +10,51 @@ environment:
   DOCKER_PASS:
     secure: qh5Dw8ePSOpWoRpxzNdsNZWzX8u0PjTUTTx200SP2JE=
 
-install:
+before_build:
   - ps: Write-Host Server version $(gp 'HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion').BuildLabEx
   - docker version
 
 build_script:
-  - ps: Write-Host Starting build
-  - docker build --tag rocker-win:3.4.4 --file ltsc2016/3.4/Dockerfile .
-  - docker build --tag rocker-win:3.5.1 --file ltsc2016/3.5/Dockerfile .
-  - docker build --tag rocker-win:latest --file ltsc2016/latest/Dockerfile .
-  - docker build --tag rocker-win:3.6.2 --file ltsc2016/latest/Dockerfile .
+  - ps: |
+      Write-Host Starting build $env:APPVEYOR_BUILD_WORKER_IMAGE
+
+      if($env:APPVEYOR_BUILD_WORKER_IMAGE -like "2017") {
+        docker build --tag rocker-win:3.4.4 --file ltsc2016/3.4/Dockerfile .
+        docker build --tag rocker-win:3.5.3 --file ltsc2016/3.5/Dockerfile .
+        docker build --tag rocker-win:latest --file ltsc2016/latest/Dockerfile .
+      }
+
+      if($env:APPVEYOR_BUILD_WORKER_IMAGE -like "2019") {
+        docker build --tag rocker-win:3.6.2 --file ltsc2019/latest/Dockerfile .
+        docker build --tag rocker-win:latest --file ltsc2019/latest/Dockerfile .
+      }
 
 test_script:
-  - ps: docker run --rm -it rocker-win:3.4.4 R.exe --version
-  - ps: docker run --rm -it rocker-win:3.5.1 R.exe --version
+  #- ps: docker run --rm -it rocker-win:3.4.4 R.exe --version
+  #- ps: docker run --rm -it rocker-win:3.5.3 R.exe --version
   - ps: docker run --rm -it rocker-win:latest Rscript.exe -e "sessionInfo()"
-  - ps: docker run --rm -it rocker-win:3.6.2 Rscript.exe -e "sessionInfo()"
+  #- ps: docker run --rm -it rocker-win:3.6.2 Rscript.exe -e "sessionInfo()"
 
-deploy_script:
+build_success:
   - ps: |
       echo "$env:DOCKER_PASS" | docker login -u "$env:DOCKER_USER" --password-stdin
-      docker tag rocker-win:3.4.4 nuest/rocker-win:ltsc2016-3.4.4
-      docker tag rocker-win:3.5.1 nuest/rocker-win:ltsc2016-3.5.1
-      docker tag rocker-win:latest nuest/rocker-win:ltsc2016-latest
-      docker tag rocker-win:3.6.2 nuest/rocker-win:ltsc2019-3.6.2
-      docker push nuest/rocker-win:ltsc2016-3.4.4
-      docker push nuest/rocker-win:ltsc2016-3.5.1
-      docker push nuest/rocker-win:ltsc2016-latest
-      docker push nuest/rocker-win:ltsc2019-3.6.2
+
+      Write-Host Starting build $env:APPVEYOR_BUILD_WORKER_IMAGE
+      
+      if($env:APPVEYOR_BUILD_WORKER_IMAGE -like "2017") {
+        docker tag rocker-win:3.4.4 nuest/rocker-win:ltsc2016-3.4.4
+        docker tag rocker-win:3.5.3 nuest/rocker-win:ltsc2016-3.5.3
+        docker tag rocker-win:latest nuest/rocker-win:ltsc2016-latest
+        
+        docker push nuest/rocker-win:ltsc2016-3.4.4
+        docker push nuest/rocker-win:ltsc2016-3.5.3
+        docker push nuest/rocker-win:ltsc2016-latest
+      }
+
+      if($env:APPVEYOR_BUILD_WORKER_IMAGE -like "2019") {
+        docker push nuest/rocker-win:ltsc2019-3.6.2
+        docker push nuest/rocker-win:ltsc2019-latest
+      }
 
 on_finish:
   - docker images
