really fix "old" download URL

--- a/ltsc2016/3.4-nano/Dockerfile
+++ b/ltsc2016/3.4-nano/Dockerfile
@@ -8,7 +8,7 @@ ENV R_INSTALLER_HASH 0ff087acbae677d7255af19b0a9df27f
 WORKDIR /
 
 # "latest" version redirect would be available via https://cloud.r-project.org/bin/windows/base/release.htm
-RUN Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/old/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
+RUN Invoke-WebRequest https://cloud.r-project.org/bin/windows/base/old/$env:R_VERSION/R-$env:R_VERSION-win.exe -OutFile .\R-win.exe
 
 RUN if ( (Get-FileHash -Path .\R-win.exe -Algorithm MD5).hash -ne $env:R_INSTALLER_HASH ) { Write-Warning 'hash mismatch for downloaded file, stopping.'; exit 1 }
 
