--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,8 +49,13 @@ deploy_script:
       }
 
       if($env:APPVEYOR_BUILD_WORKER_IMAGE -eq "Visual Studio 2019") {
+        docker tag rocker-win:3.6.2 nuest/rocker-win:ltsc2019-3.6.2
+        docker tag rocker-win:latest nuest/rocker-win:ltsc2019-latest
+        docker tag rocker-win:latest nuest/rocker-win:latest
+
         docker push nuest/rocker-win:ltsc2019-3.6.2
         docker push nuest/rocker-win:ltsc2019-latest
+        docker push nuest/rocker-win:latest
       }
 
 on_finish:
