--- a/ltsc2019/latest/Dockerfile
+++ b/ltsc2019/latest/Dockerfile
@@ -1,4 +1,4 @@
-FROM microsoft/windowsservercore:ltsc2019
+FROM mcr.microsoft.com/windows/servercore:ltsc2019
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
